--- a/src/Login.html
+++ b/src/Login.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ComplaNet — Login</title>
-  <script type="module" crossorigin src="../assets/login-CJO0vdXT.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-Dlawwzv1.js">
+  <script type="module" crossorigin src="../assets/login-B99c23xe.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-DP-aSKaS.js">
   <link rel="stylesheet" crossorigin href="../assets/supabaseClient-DdYYvB8s.css">
 </head>
 
