--- a/src/Newcomplaint.html
+++ b/src/Newcomplaint.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — Dashboard</title>
 
-  <script type="module" crossorigin src="../assets/supabaseClient-DBFBYl3d.js"></script>
-  <script type="module" crossorigin src="../assets/darkMode-Bo7vC4BU.js"></script>
-  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-a2wLv86l.css">
+  <script type="module" crossorigin src="../assets/supabaseClient-CPEeNd1r.js"></script>
+  <script type="module" crossorigin src="../assets/darkMode-BNH4bXmr.js"></script>
+  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-Bp9xqjfR.css">
 </head>
 
 <body
@@ -29,7 +29,8 @@
     <!-- Desktop Navigation -->
     <nav class="hidden md:flex space-x-6 items-center">
       <a href="UserDashboard.html" class="nav-content">Dashboard</a>
-      <a href="Newcomplaint.html" class="font-semibold text-eco hover:text-eco-dark">New Complaint</a>
+      <a href="Newcomplaint.html"
+        class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">New Complaint</a>
       <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
 
 
@@ -66,7 +67,9 @@
       </div>
       <nav class="mt-6 flex flex-col space-y-2 px-6">
         <a href="UserDashboard.html" class="nav-content">Dashboard</a>
-        <a href="Newcomplaint.html" class="font-semibold text-eco hover:text-eco-dark">New Complaint</a>
+        <a href="Newcomplaint.html"
+          class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">New
+          Complaint</a>
         <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
         <a href="Profile.html" class="nav-content">View Profile</a>
       </nav>
@@ -83,7 +86,7 @@
 
       <!-- Student Behavior -->
       <a href="StudentBehaviorForm.html"
-        class="relative group block bg-[var(--color-eco-dark)] dark:bg-[var(--color-green-dark)] rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl hover:bg-[var(--color-eco)] dark:hover:bg-[var(--color-eco-dark)]  transition-all duration-300 ">
+        class="relative group block bg-[#2b88ba] dark:bg-[var(--color-green-dark)] rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl hover:bg-[#a6e3ff] dark:hover:bg-[#2b88ba]  transition-all duration-300 ">
         <div class="absolute inset-0 flex flex-col justify-center items-center p-6 transition-all duration-300">
           <h3
             class="text-xl font-semibold text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-">
@@ -96,7 +99,7 @@
 
       <!-- Administrative -->
       <a href="AdministrativeForm.html"
-        class="relative group block bg-[var(--color-eco-dark)] dark:bg-[var(--color-green-dark)]  rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl  hover:bg-[var(--color-eco)] dark:hover:bg-[var(--color-eco-dark)] transition-all duration-300">
+        class="relative group block bg-[#2b88ba] dark:bg-[var(--color-green-dark)]  rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl  hover:bg-[#a6e3ff] dark:hover:bg-[#2b88ba] transition-all duration-300">
         <div class="absolute inset-0 flex flex-col justify-center items-center p-6 transition-all duration-300">
           <h3
             class="text-xl font-semibold text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-2">
@@ -109,7 +112,7 @@
 
       <!-- Technical -->
       <a href="TechnicalForm.html"
-        class="relative group block bg-[var(--color-eco-dark)] dark:bg-[var(--color-green-dark)] rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl  hover:bg-[var(--color-eco)] dark:hover:bg-[var(--color-eco-dark)] transition-all duration-300">
+        class="relative group block bg-[#2b88ba] dark:bg-[var(--color-green-dark)] rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl  hover:bg-[#a6e3ff] dark:hover:bg-[#2b88ba] transition-all duration-300">
         <div class="absolute inset-0 flex flex-col justify-center items-center p-6 transition-all duration-300">
           <h3
             class="text-xl font-semibold text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-2">
@@ -122,7 +125,7 @@
 
       <!-- Academic -->
       <a href="AcademicForm.html"
-        class="relative group block bg-[var(--color-eco-dark)] dark:bg-[var(--color-green-dark)] rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl  hover:bg-[var(--color-eco)] dark:hover:bg-[var(--color-eco-dark)] transition-all duration-300">
+        class="relative group block bg-[#2b88ba] dark:bg-[var(--color-green-dark)] rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl  hover:bg-[#a6e3ff] dark:hover:bg-[#2b88ba] transition-all duration-300">
         <div class="absolute inset-0 flex flex-col justify-center items-center p-6 transition-all duration-300">
           <h3
             class="text-xl font-semibold text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-2">
@@ -135,7 +138,7 @@
 
       <!-- Facility -->
       <a href="FacilityForm.html"
-        class="relative group block bg-[var(--color-eco-dark)] dark:bg-[var(--color-green-dark)] rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl  hover:bg-[var(--color-eco)] dark:hover:bg-[var(--color-eco-dark)] transition-all duration-300">
+        class="relative group block bg-[#2b88ba] dark:bg-[var(--color-green-dark)] rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl  hover:bg-[#a6e3ff] dark:hover:bg-[#2b88ba] transition-all duration-300">
         <div class="absolute inset-0 flex flex-col justify-center items-center p-6 transition-all duration-300">
           <h3
             class="text-xl font-semibold text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-2">
@@ -148,7 +151,7 @@
 
       <!-- Other -->
       <a href="OtherForm.html"
-        class="relative group block bg-[var(--color-eco-dark)] dark:bg-[var(--color-green-dark)] rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl  hover:bg-[var(--color-eco)] dark:hover:bg-[var(--color-eco-dark)] transition-all duration-300">
+        class="relative group block bg-[#2b88ba] dark:bg-[var(--color-green-dark)] rounded-xl shadow-lg h-52 overflow-hidden hover:shadow-xl  hover:bg-[#a6e3ff] dark:hover:bg-[#2b88ba] transition-all duration-300">
         <div class="absolute inset-0 flex flex-col justify-center items-center p-6 transition-all duration-300">
           <h3
             class="text-xl font-semibold text-[var(--color-text-light)] dark:text-[var(--color-text-dark)] group-hover:text-base transition-all duration-300 transform group-hover:-translate-y-2">
@@ -176,7 +179,7 @@
       <div>
         <h2 class="text-xl font-semibold mb-4 
                   text-[var(--color-blue-btn)] 
-                  dark:text-[var(--color-eco)]">
+                  dark:text-blue-400">
           ComplaNet
         </h2>
         <p class="text-sm leading-6">
@@ -189,16 +192,16 @@
       <div>
         <h2 class="text-xl font-semibold mb-4 
                   text-[var(--color-blue-btn)]
-                  dark:text-[var(--color-eco)]">
+                  dark:text-blue-400">
           Quick Navigation
         </h2>
         <ul class="space-y-2 text-sm">
           <li><a href="./UserDashboard.html"
-              class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Dashboard</a></li>
+              class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a></li>
           <li><a href="./Newcomplaint.html"
-              class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">New Complaint</a></li>
+              class="hover:text-blue-700 dark:hover:text-blue-400">New Complaint</a></li>
           <li><a href="./Mycomplaint.html"
-              class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">My Complaints</a></li>
+              class="hover:text-blue-700 dark:hover:text-blue-400">My Complaints</a></li>
         </ul>
       </div>
 
@@ -206,34 +209,34 @@
       <div>
         <h2 class="text-xl font-semibold mb-4 
                   text-[var(--color-blue-btn)]
-                  dark:text-[var(--color-eco)]">
+                  dark:text-blue-400">
           Complaint Category
         </h2>
 
         <details class="bg-[var(--color-eco)] dark:bg-[#1A2C36] 
                 p-4 rounded-lg cursor-pointer text-sm">
-          <summary class="font-medium hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">
+          <summary class="font-medium text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">
             Select Complaint Type
           </summary>
 
           <ul class="mt-3 space-y-2 pl-3">
             <li><a href="./AcademicForm.html"
-                class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Academic Complaint</a>
+                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Academic Complaint</a>
             </li>
             <li><a href="./FacilityForm.html"
-                class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Facility Complaint</a>
+                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Facility Complaint</a>
             </li>
             <li><a href="./AdministrativeForm.html"
-                class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Administrative
+                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Administrative
                 Complaint</a></li>
             <li><a href="./StudentBehaviorForm.html"
-                class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Student Behavior
+                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Student Behavior
                 Complaint</a></li>
             <li><a href="./TechnicalForm.html"
-                class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Technical Complaint</a>
+                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Technical Complaint</a>
             </li>
             <li><a href="./OtherForm.html"
-                class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Other Complaint</a></li>
+                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Other Complaint</a></li>
           </ul>
         </details>
       </div>
