--- a/src/Notifications.html
+++ b/src/Notifications.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notifications — ComplaNet</title>
-  <script type="module" crossorigin src="../assets/supabaseClient-DBFBYl3d.js"></script>
-  <script type="module" crossorigin src="../assets/darkMode-Bo7vC4BU.js"></script>
-  <script type="module" crossorigin src="../assets/notifications-DCxmFq5-.js"></script>
-  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-a2wLv86l.css">
+  <script type="module" crossorigin src="../assets/supabaseClient-CPEeNd1r.js"></script>
+  <script type="module" crossorigin src="../assets/darkMode-BNH4bXmr.js"></script>
+  <script type="module" crossorigin src="../assets/notifications-BsnUUxiz.js"></script>
+  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-Bp9xqjfR.css">
 </head>
 
 <body
@@ -73,7 +73,8 @@
             </div>
             <nav class="mt-6 flex flex-col space-y-2 px-6">
                 <a href="UserDashboard.html" class="nav-content">Dashboard</a>
-                <a href="Notifications.html" class="font-semibold text-eco hover:text-eco-dark">Notifications</a>
+                <a href="Notifications.html"
+                    class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Notifications</a>
                 <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
                 <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
                 <a href="Profile.html" class="nav-content">View Profile</a>
@@ -88,7 +89,9 @@
     <main class="flex-1 px-4 md:px-10 py-6 md:py-8 max-w-4xl mx-auto w-full">
         <div class="flex justify-between items-center mb-6">
             <h1 class="text-3xl font-bold">Your Notifications</h1>
-            <button id="markAllReadPageBtn" class="text-sm text-eco hover:underline font-semibold">Mark all as
+            <button id="markAllReadPageBtn"
+                class="text-sm text-eco hover:underline dark:text-blue-400 dark:hover:text-blue-300 font-semibold">Mark
+                all as
                 read</button>
         </div>
 
@@ -169,79 +172,87 @@
          bg-[var(--color-eco-light)] text-[var(--color-text-light)]
          dark:bg-[#0F1A24] dark:text-gray-200">
 
-      <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-10 text-center md:text-left">
+        <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-10 text-center md:text-left">
 
-        <!-- Column 1 -->
-        <div>
-          <h2 class="text-xl font-semibold mb-4 
+            <!-- Column 1 -->
+            <div>
+                <h2 class="text-xl font-semibold mb-4 
                  text-[var(--color-blue-btn)] 
-                 dark:text-[var(--color-eco)]">
-            ComplaNet
-          </h2>
-          <p class="text-sm leading-6">
-            ComplaNet is your unified university complaint management system.<br>
-            Submit, track, and manage your complaints easily and securely.
-          </p>
-        </div>
+                 dark:text-blue-400">
+                    ComplaNet
+                </h2>
+                <p class="text-sm leading-6">
+                    ComplaNet is your unified university complaint management system.<br>
+                    Submit, track, and manage your complaints easily and securely.
+                </p>
+            </div>
 
-        <!-- Column 2 -->
-        <div>
-          <h2 class="text-xl font-semibold mb-4 
+            <!-- Column 2 -->
+            <div>
+                <h2 class="text-xl font-semibold mb-4 
                  text-[var(--color-blue-btn)]
-                 dark:text-[var(--color-eco)]">
-            Quick Navigation
-          </h2>
-          <ul class="space-y-2 text-sm">
-            <li><a href="./UserDashboard.html"
-                class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Dashboard</a></li>
-            <li><a href="./Newcomplaint.html"
-                class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">New Complaint</a></li>
-            <li><a href="./Mycomplaint.html"
-                class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">My Complaints</a></li>
-          </ul>
-        </div>
+                 dark:text-blue-400">
+                    Quick Navigation
+                </h2>
+                <ul class="space-y-2 text-sm">
+                    <li><a href="./UserDashboard.html"
+                            class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a>
+                    </li>
+                    <li><a href="./Newcomplaint.html"
+                            class="hover:text-blue-700 dark:hover:text-blue-400">New
+                            Complaint</a></li>
+                    <li><a href="./Mycomplaint.html"
+                            class="hover:text-blue-700 dark:hover:text-blue-400">My
+                            Complaints</a></li>
+                </ul>
+            </div>
 
-        <!-- Column 3 -->
-        <div>
-          <h2 class="text-xl font-semibold mb-4 
+            <!-- Column 3 -->
+            <div>
+                <h2 class="text-xl font-semibold mb-4 
                  text-[var(--color-blue-btn)]
-                 dark:text-[var(--color-eco)]">
-            Complaint Category
-          </h2>
+                 dark:text-blue-400">
+                    Complaint Category
+                </h2>
 
-          <details class="bg-[var(--color-eco)] dark:bg-[#1A2C36] 
+                <details class="bg-[var(--color-eco)] dark:bg-[#1A2C36] 
                p-4 rounded-lg cursor-pointer text-sm">
-            <summary class="font-medium hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">
-              Select Complaint Type
-            </summary>
+                    <summary class="font-medium text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">
+                        Select Complaint Type
+                    </summary>
 
-            <ul class="mt-3 space-y-2 pl-3">
-              <li><a href="./AcademicForm.html"
-                  class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Academic Complaint</a>
-              </li>
-              <li><a href="./FacilityForm.html"
-                  class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Facility Complaint</a>
-              </li>
-              <li><a href="./AdministrativeForm.html"
-                  class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Administrative
-                  Complaint</a></li>
-              <li><a href="./StudentBehaviorForm.html"
-                  class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Student Behavior
-                  Complaint</a></li>
-              <li><a href="./TechnicalForm.html"
-                  class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Technical Complaint</a>
-              </li>
-              <li><a href="./OtherForm.html"
-                  class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Other Complaint</a></li>
-            </ul>
-          </details>
+                    <ul class="mt-3 space-y-2 pl-3">
+                        <li><a href="./AcademicForm.html"
+                                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Academic
+                                Complaint</a>
+                        </li>
+                        <li><a href="./FacilityForm.html"
+                                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Facility
+                                Complaint</a>
+                        </li>
+                        <li><a href="./AdministrativeForm.html"
+                                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Administrative
+                                Complaint</a></li>
+                        <li><a href="./StudentBehaviorForm.html"
+                                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Student
+                                Behavior
+                                Complaint</a></li>
+                        <li><a href="./TechnicalForm.html"
+                                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Technical
+                                Complaint</a>
+                        </li>
+                        <li><a href="./OtherForm.html"
+                                class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Other
+                                Complaint</a></li>
+                    </ul>
+                </details>
+            </div>
+
         </div>
 
-      </div>
-
-      <div class="text-center text-sm mt-10 text-gray-700 dark:text-gray-400">
-        © 2025 ComplaNet. All rights reserved.
-      </div>
+        <div class="text-center text-sm mt-10 text-gray-700 dark:text-gray-400">
+            © 2025 ComplaNet. All rights reserved.
+        </div>
 
     </footer>
 
