--- a/src/UserDashboard.html
+++ b/src/UserDashboard.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ComplaNet — Dashboard</title>
 
-  <script type="module" crossorigin src="../assets/userDashboard-6pUABETx.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-DBFBYl3d.js">
-  <link rel="modulepreload" crossorigin href="../assets/darkMode-Bo7vC4BU.js">
-  <link rel="modulepreload" crossorigin href="../assets/notifications-DCxmFq5-.js">
-  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-a2wLv86l.css">
+  <script type="module" crossorigin src="../assets/userDashboard-ClQMTcPE.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/supabaseClient-CPEeNd1r.js">
+  <link rel="modulepreload" crossorigin href="../assets/darkMode-BNH4bXmr.js">
+  <link rel="modulepreload" crossorigin href="../assets/notifications-BsnUUxiz.js">
+  <link rel="stylesheet" crossorigin href="../assets/supabaseClient-Bp9xqjfR.css">
 </head>
 
 <body
@@ -31,7 +31,8 @@
 
       <!-- Desktop Links -->
       <nav class="hidden md:flex space-x-6 items-center">
-        <a href="UserDashboard.html" class="font-semibold text-eco hover:text-eco-dark">Dashboard</a>
+        <a href="UserDashboard.html"
+          class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Dashboard</a>
         <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
         <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
       </nav>
@@ -75,7 +76,8 @@
         <img src="../images/BGlessLogoDark.png" alt="Logo" class="h-10">
       </div>
       <nav class="mt-6 flex flex-col space-y-2 px-6">
-        <a href="UserDashboard.html" class="font-semibold text-eco hover:text-eco-dark">Dashboard</a>
+        <a href="UserDashboard.html"
+          class="font-semibold text-eco hover:text-eco-dark dark:text-blue-400 dark:hover:text-blue-300">Dashboard</a>
         <a href="Notifications.html" class="nav-content">Notifications</a>
         <a href="Newcomplaint.html" class="nav-content">New Complaint</a>
         <a href="Mycomplaint.html" class="nav-content">My Complaints</a>
@@ -174,7 +176,7 @@
         <div>
           <h2 class="text-xl font-semibold mb-4 
                  text-[var(--color-blue-btn)] 
-                 dark:text-[var(--color-eco)]">
+                 dark:text-blue-400">
             ComplaNet
           </h2>
           <p class="text-sm leading-6">
@@ -187,16 +189,16 @@
         <div>
           <h2 class="text-xl font-semibold mb-4 
                  text-[var(--color-blue-btn)]
-                 dark:text-[var(--color-eco)]">
+                 dark:text-blue-400">
             Quick Navigation
           </h2>
           <ul class="space-y-2 text-sm">
             <li><a href="./UserDashboard.html"
-                class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Dashboard</a></li>
+                class="hover:text-blue-700 dark:hover:text-blue-400">Dashboard</a></li>
             <li><a href="./Newcomplaint.html"
-                class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">New Complaint</a></li>
+                class="hover:text-blue-700 dark:hover:text-blue-400">New Complaint</a></li>
             <li><a href="./Mycomplaint.html"
-                class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">My Complaints</a></li>
+                class="hover:text-blue-700 dark:hover:text-blue-400">My Complaints</a></li>
           </ul>
         </div>
 
@@ -204,34 +206,34 @@
         <div>
           <h2 class="text-xl font-semibold mb-4 
                  text-[var(--color-blue-btn)]
-                 dark:text-[var(--color-eco)]">
+                 dark:text-blue-400">
             Complaint Category
           </h2>
 
           <details class="bg-[var(--color-eco)] dark:bg-[#1A2C36] 
                p-4 rounded-lg cursor-pointer text-sm">
-            <summary class="font-medium hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">
+            <summary class="font-medium text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">
               Select Complaint Type
             </summary>
 
             <ul class="mt-3 space-y-2 pl-3">
               <li><a href="./AcademicForm.html"
-                  class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Academic Complaint</a>
+                  class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Academic Complaint</a>
               </li>
               <li><a href="./FacilityForm.html"
-                  class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Facility Complaint</a>
+                  class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Facility Complaint</a>
               </li>
               <li><a href="./AdministrativeForm.html"
-                  class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Administrative
+                  class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Administrative
                   Complaint</a></li>
               <li><a href="./StudentBehaviorForm.html"
-                  class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Student Behavior
+                  class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Student Behavior
                   Complaint</a></li>
               <li><a href="./TechnicalForm.html"
-                  class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Technical Complaint</a>
+                  class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Technical Complaint</a>
               </li>
               <li><a href="./OtherForm.html"
-                  class="hover:text-[var(--color-eco-dark)] dark:hover:text-[var(--color-eco)]">Other Complaint</a></li>
+                  class="text-white hover:text-blue-200 dark:text-gray-300 dark:hover:text-blue-400">Other Complaint</a></li>
             </ul>
           </details>
         </div>
